--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
   "presets": [
     "react",
-    "es2015"
+    "es2015",
+    "babel-preset-stage-0"
   ],
   "plugins": [
-    "transform-es2015-destructuring",
-    "transform-object-rest-spread"
   ]
 }
