--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-jest": "^20.0.3",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^2.9.1",
     "jest": "^20.0.4",
     "nock": "^9.0.14",
