--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^2.9.1",
+    "enzyme-to-json": "^2.0.1",
     "jest": "^20.0.4",
     "nock": "^9.0.14",
     "react-test-renderer": "^15.6.1"
