--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "TZ=Asia/Tokyo jest --verbose"
+    "test": "TZ=Asia/Tokyo jest --verbose",
+    "coverage": "yarn run test -- --coverage",
+    "coveralls": "NODE_ENV=development cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
