--- a/package.json
+++ b/package.json
@@ -7,22 +7,29 @@
     "test": "TZ=Asia/Tokyo jest --verbose"
   },
   "dependencies": {
-    "axios": "^0.16.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "axios": "^0.17.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^20.0.3",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "enzyme": "^2.9.1",
-    "jest": "^20.0.4",
-    "nock": "^9.0.14",
-    "react-test-renderer": "^15.6.1"
+    "enzyme": "^3.2.0",
+    "jest": "^21.2.1",
+    "nock": "^9.1.4",
+    "react-test-renderer": "^16.2.0"
   },
   "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
     "collectCoverageFrom": [
       "src/**/*.js",
       "!**/__tests__/**"
