--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
     ],
-    "testRegex": "/__tests__/.*\\.(test|spec)\\.js$"
+    "testRegex": "/__tests__/.*\\.(test|spec)\\.js$",
+    "testURL": "http://localhost"
   }
 }
